--- a/Views/Movies/Index.cshtml
+++ b/Views/Movies/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Movie Searcher</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create New Movie</a>
 </p>
 <form asp-controller="Movies" asp-action="Index" method="get">
     <p>
